修复了stable版本的排版错误的问题
砍了这手把，就手贱

--- a/assets/web1/pc-mm.css
+++ b/assets/web1/pc-mm.css
@@ -127,164 +127,11 @@ body{
     cursor: pointer;
 }
 
-@media (min-width: 769px) {
-    *{
-        margin: 0;
-        padding: 0;
-        font-family: sans-serif;
+@media (max-width:767px){
+    .wrapper h2{ 
+        font-size:2rem;
     }
-    
-    .banner{
-        width: 100%;
-        height: 100vh;
-        background-image: url(./background1.jpg);
-        background-size: cover;
-        background-position: center center;
-    } 
-    
-    .navbar{
-        width: 85%;
-        margin: auto;
-        padding: 30px 0;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    
-    .logo{
-        width: 150px;
-        cursor: pointer;
-        margin: 0 0px;
-    }
-    
-    .navbar ul li {
-        list-style: none;
-        display: inline-block;
-        margin: 0 0px;
-        position: relative;
-    }
-    
-    .navbar ul li a{
-        text-decoration: none;
-        color: black;
-        white-space: nowrap;
-        text-transform: uppercase;
-        font-size: 12px;
-    }
-    
-    .navbar ul li::after{
-        content: '';
-        height: 3px;
-        width: 0;
-        background: #9AB8DB;
-        position: absolute;
-        left: 0;
-        bottom: -5px;
-        transition: 1s;
-    }
-    
-    .navbar ul li:hover::after{
-        width: 100%;
-    }
-    
-    .content{
-        width: 100%;
-        color: #72a0c1;
-        font-size: 24px;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        text-align: center;
-    }
-    
-    .content p{
-        color: #72a0c1;
-        margin: 10px auto;
-        font-weight: 500;
-        line-height: 20px;
-        font-size: 16px;
-    }
-    
-    .content h1{
-        color: #7281c1;
-        font-size: 35px;
-    }
-    
-    button{
-        width: 300px;
-        padding: 10px 0;
-        text-align: center;
-        margin: 10px 5px;
-        border-radius: 250px;
-        font-weight: bold;
-        border: 2px solid #7281c1;
-        background: transparent;
-        color:  #5babd3;
-        cursor: pointer;
-        position: relative;
-        overflow: hidden;
-        font-size: 25px;
-    }
-    
-    span{
-        background: #9AB8DB;
-        height: 100%;
-        width: 0;
-        border-radius: 25px;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        z-index: -1;
-        transition: 0.5s;
-    }
-    
-    button:hover span{
-        width: 100%;
-    }
-    
-    button:hover{
-        border: none;
-    }
-    
-    body{
-        font-family: 'Poppins', sans-serif;
-        background-color:#9AB8DB;
-        min-height:100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    } 
-    
-    .wrapper{
-        text-align: center;
-    }
-    
-    .wrapper h2{
-        margin:20px 0;
-        font-size:1.8rem;
-    }
-    
-    .wrapper img{
-        width:100%;
-        max-width:80%;
-        height: auto;
-    }
-    
-    .wrapper h4{
-        margin:20px 0 10px;
+    .wrapper h4{ 
         font-size:1rem;
     }
-    
-    .main-btn{
-        padding:10px;
-        background-color: #6c63ff;
-        color:#fff;
-        border:none;
-        font-weight:700;
-        letter-spacing: 1px;
-        border-radius: 6px;
-        cursor: pointer;
-        font-size: 14px;
-    }
-    
-  }
+}
